# mnist

./: .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
include/: mnist_reader.hpp  network.hpp  neuron.hpp  utils.hpp
real-time/: CMakeLists.txt  main.cpp  olcPixelGameEngine.h
trainer/: CMakeLists.txt  main.cpp  trainer.cpp  trainer.hpp
